--- a/file.html
+++ b/file.html
@@ -32,9 +32,10 @@
       <!-- separation -->
       <!-- separation -->
 
-      <div class="game-screen">
-        <div class="enemy">
+      <div id="game-screen">
+        <div class="enemy" id="enemy-div">
           <img
+            id="enemy-dragon"
             class="enemy"
             src="https://static.vecteezy.com/system/resources/previews/019/974/822/original/pixel-art-flying-dragon-dragon-pixel-illustration-cartoon-monster-pixel-design-free-vector.jpg"
           />
@@ -74,7 +75,7 @@
       <div id="mage-screen"></div>
       <div id="ogre-screen"></div>
     </main>
-
+    <script src="enemy.js"></script>
     <script src="game.js"></script>
     <script src="script.js"></script>
   </body>
