--- a/file.html
+++ b/file.html
@@ -92,7 +92,9 @@
         <button id="restart-button">RESTART GAME</button>
       </div>
     </main>
-    <script src="enemy.js"></script>
+    <script src="card.js"></script>
+    <script src="enemyCard.js"></script>
+    <script src="playerCard.js"></script>
     <script src="game.js"></script>
     <script src="script.js"></script>
   </body>
