added enemy and players to game.js

--- a/file.html
+++ b/file.html
@@ -29,11 +29,7 @@
 
       <div id="game-screen">
         <div class="enemy" id="enemy-div">
-          <img
-            id="enemy-dragon"
-            class="enemy"
-            src="help-pixelart\Designer(10).jpeg"
-          />
+          <img id="enemy-dragon" class="enemy" src="images\Designer(10).jpeg" />
         </div>
         <div class="card-inventory">
           <div id="card-holder" class="cards">
@@ -42,7 +38,7 @@
               <img
                 class="cards-img"
                 id="knight-img"
-                src="help-pixelart/Designer(14).jpeg"
+                src="images/Designer(14).jpeg"
               />
             </div>
 
@@ -50,7 +46,7 @@
               <img
                 class="cards-img"
                 id="mage-img"
-                src="help-pixelart\Designer(13).jpeg"
+                src="images\Designer(13).jpeg"
               />
             </div>
 
@@ -58,7 +54,7 @@
               <img
                 class="cards-img"
                 id="ogre-img"
-                src="help-pixelart\FFD9djyXEAYdggn.png"
+                src="images\FFD9djyXEAYdggn.png"
               />
             </div>
           </div>
@@ -71,18 +67,15 @@
       <!-- card screens to access on event-listener-->
       <div id="mage-screen">
         <h2 class="summon-text">YOU SUMMONED THE MAGE</h2>
-        <img id="mage-screen-img" src="help-pixelart/Designer(12).jpeg" />
+        <img id="mage-screen-img" src="images/Designer(12).jpeg" />
       </div>
       <div id="knight-screen">
         <h2 class="summon-text">YOU SUMMONED THE KNIGHT</h2>
-        <img
-          id="knight-screen-img"
-          src="help-pixelart\pixel-knight-in-action.jpg"
-        />
+        <img id="knight-screen-img" src="images\pixel-knight-in-action.jpg" />
       </div>
       <div id="ogre-screen">
         <h2 class="summon-text">YOU SUMMONED THE OGRE</h2>
-        <img src="help-pixelart/Designer(11).jpeg" id="ogre-screen-img" />
+        <img src="images/Designer(11).jpeg" id="ogre-screen-img" />
       </div>
       <!--  game end and restart -->
       <!--  game end and restart -->
