adding lives function

--- a/file.html
+++ b/file.html
@@ -28,6 +28,9 @@
       <!-- separation -->
 
       <div id="game-screen">
+        <div id="enemyHealthBar">
+          <div id="enemyCurrentHealth">100</div>
+        </div>
         <div class="enemy" id="enemy-div">
           <img
             id="enemy-dragon"
