--- a/file.html
+++ b/file.html
@@ -28,8 +28,11 @@
       <!-- separation -->
 
       <div id="game-screen">
+        <div id="enemyHealthBar">
+          <div id="enemyCurrentHealth">100</div>
+        </div>
         <div class="enemy" id="enemy-div">
-          <img id="enemy-dragon" class="enemy" src="images\Designer(10).jpeg" />
+          <img id="enemy-dragon" class="enemy" src="images/dragon.png" />
         </div>
         <div class="card-inventory">
           <div id="card-holder" class="cards">
