made standard player card

--- a/file.html
+++ b/file.html
@@ -35,17 +35,18 @@
           <img id="enemy-dragon" class="enemy" src="images/dragon.png" />
         </div>
         <div class="card-inventory">
-          <div id="card-holder" class="cards">
-            <h3>KNIGHT</h3>
-            <div class="cards" id="knight-card">
+          <div id="card-holder">
+            <div class="card" id="knight-card">
+              <div id="card-name">KNIGHT</div>
               <img
-                class="cards-img"
+                class="card-img"
                 id="knight-img"
                 src="images/Designer(14).jpeg"
               />
+              <div id="card-attributes">attributes object</div>
             </div>
 
-            <div class="cards" id="mage-card">
+            <!-- <div class="cards" id="mage-card">
               <img
                 class="cards-img"
                 id="mage-img"
@@ -59,7 +60,7 @@
                 id="ogre-img"
                 src="images\FFD9djyXEAYdggn.png"
               />
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
