started to create game logic

--- a/file.html
+++ b/file.html
@@ -28,7 +28,8 @@
       <!-- separation -->
 
       <div id="game-screen">
-        <div id="enemyHealthBar">
+        <div class="card-inventory"></div>
+        <!--  <div id="enemyHealthBar">
           <div id="enemyCurrentHealth">100</div>
         </div>
         <div class="enemy" id="enemy-div">
@@ -44,9 +45,9 @@
                 src="images/Designer(14).jpeg"
               />
               <div id="card-attributes">attributes object</div>
-            </div>
+            </div> -->
 
-            <!-- <div class="cards" id="mage-card">
+        <!-- <div class="cards" id="mage-card">
               <img
                 class="cards-img"
                 id="mage-img"
@@ -61,8 +62,8 @@
                 src="images\FFD9djyXEAYdggn.png"
               />
             </div> -->
-          </div>
-        </div>
+        <!-- </div>
+        </div> -->
       </div>
       <!-- card screens to access on event-listener-->
       <!-- card screens to access on event-listener-->
