--- a/file.html
+++ b/file.html
@@ -9,14 +9,12 @@
   <body>
     <main>
       <div id="intro-screen">
-        <img id="start-button-img" src="images\Untitled design (1).png" />
         <div class="instructions-button-div">
-          <img
-            id="instructions-button"
-            src="images/FileStorage.GroundBreaking.png"
-          />
+        <img id="start-button-img" src="images\Untitled design (1).png" />
+          <img id="instructions-button" src="images/Designer.png" />
           <img id="instructions-img" src="images/Designer(17).jpeg" />
         </div>
+      </div>
       </div>
 
       <!-- separation -->
