--- a/file.html
+++ b/file.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Defenders of Pixelaria</title>
     <link rel="stylesheet" href="styles.css" />
+  
   </head>
   <body>
     <main>
       <div id="intro-screen">
-        <div class="instructions-button-div">
+        <div id="instructions-button-div">
         <img id="start-button-img" src="images\Untitled design (1).png" />
           <img id="instructions-button" src="images/Designer.png" />
           <img id="instructions-img" src="images/Designer(17).jpeg" />
