implemented game logic

--- a/file.html
+++ b/file.html
@@ -44,10 +44,13 @@
       <!--  game end and restart -->
       <!--  game end and restart -->
       <!--  game end and restart -->
-      <div id="end-game-screen">
+      <div id="win-game-screen" class="end-game-screen">
         <h1>YOU WIN!</h1>
         <button id="restart-button">RESTART GAME</button>
       </div>
+      <div id="end-game-screen" class="end-game-screen"> 
+        <h1>YOU LOSE!</h1>
+        <button id="restart-button">RESTART GAME</button>
     </main>
 
     <script src="card.js"></script>
