--- a/file.html
+++ b/file.html
@@ -5,17 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Defenders of Pixelaria</title>
     <link rel="stylesheet" href="styles.css" />
-  
   </head>
   <body>
     <main>
       <div id="intro-screen">
-        <div id="instructions-button-div">
-        <img id="start-button-img" src="images\Untitled design (1).png" />
+        <div class="buttons">
+          <img id="start-button-img" src="images\Untitled design (1).png" />
           <img id="instructions-button" src="images/Designer.png" />
-          <img id="instructions-img" src="images/Designer(17).jpeg" />
         </div>
-      </div>
+        <div id="title">
+          <img id="defenders-text" src="images/defenders-no-background.png" />
+          <br />
+          <img
+            id="instructions"
+            style="display: none"
+            src="images/instructions-no-background.png"
+          />
+        </div>
       </div>
 
       <!-- separation -->
