--- a/file.html
+++ b/file.html
@@ -28,8 +28,10 @@
       <!-- separation -->
 
       <div id="game-screen" style="display: none">
-        <div class="card-inventory" id="card-holder"></div>
         <div class="enemy-card-inventory" id="enemy-card-holder"></div>
+        <div class="player-attack-img" style="display: none" id="player-attack-img-div"></div>
+        <div class="card-inventory" id="card-holder"></div>
+        
       </div>
 
       <!-- card screens to access on event-listener-->
