random card and respawn enemy

--- a/file.html
+++ b/file.html
@@ -37,7 +37,7 @@
       <!-- card screens to access on event-listener-->
       <!-- card screens to access on event-listener-->
 
-      <div id="mage-screen">
+     <!--  <div id="mage-screen">
         <h2 class="summon-text">YOU SUMMONED THE MAGE</h2>
         <img id="mage-screen-img" src="images/Designer(12).jpeg" />
       </div>
@@ -48,7 +48,7 @@
       <div id="ogre-screen">
         <h2 class="summon-text">YOU SUMMONED THE OGRE</h2>
         <img src="images/Designer(11).jpeg" id="ogre-screen-img" />
-      </div>
+      </div> -->
       <!--  game end and restart -->
       <!--  game end and restart -->
       <!--  game end and restart -->
