player attack animations done

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="enemy-card-inventory" id="enemy-card-holder"></div>
 
         <div class="enemy-defeat-counter"></div>
-        <div class="player-attack-img" style="display: none" id="player-attack-img-div"></div>
+        <div class="player-attack-img"  id="player-attack-img-div"></div>
         <div class="card-inventory" id="card-holder"></div>
         
       </div>
