player card randomizer and generator

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <!-- separation -->
 
       <div id="game-screen" style="display: none">
+        <div class="level-counter" id="level-counter-id"></div>
         <div class="enemy-card-inventory" id="enemy-card-holder"></div>
-
         <div class="enemy-defeat-counter"></div>
         <div class="player-attack-img"  id="player-attack-img-div"></div>
         <div class="card-inventory" id="card-holder"></div>
