--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <!-- separation -->
 
       <div id="game-screen" style="display: none">
+        <div class="game-messages" id="enter-the-dungeon">YOU HAVE ENTERED THE DUNGEON</div>
         <div class="level-counter" id="level-counter-id"></div>
         <div class="enemy-card-inventory" id="enemy-card-holder"></div>
         <div class="enemy-defeat-counter"></div>
