--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <div id="game-screen" style="display: none">
         <div class="game-messages" id="enter-the-dungeon">YOU HAVE ENTERED THE DUNGEON</div>
         <div class="level-counter" id="level-counter-id"></div>
+        <div class="player-lives-counter" id="player-lives-counter-id"></div>
         <div class="enemy-card-inventory" id="enemy-card-holder"></div>
         <div class="enemy-defeat-counter"></div>
         <div class="player-attack-img"  id="player-attack-img-div"></div>
@@ -61,7 +62,7 @@
       </div>
       <div id="end-game-screen" class="end-game-screen"> 
         <h1>YOU LOSE!</h1>
-        <button id="restart-button">RESTART GAME</button>
+        <!-- <button id="restart-button">RESTART GAME</button> -->
     </main>
 
     <script src="card.js"></script>
