--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <!-- separation -->
 
       <div id="game-screen" style="display: none">
+        <audio id="medieval-music" loop controls src="/sound/medieval-background-196571.mp3"></audio>
         <div class="game-messages" id="enter-the-dungeon">YOU HAVE ENTERED THE DUNGEON</div>
         <div class="level-counter" id="level-counter-id"></div>
         <div class="player-lives-counter" id="player-lives-counter-id"></div>
